--- a/css/_styles.scss
+++ b/css/_styles.scss
@@ -5,62 +5,110 @@
 
 // SASS VARIABLES
 $white: #fff;
+$darkBlack: #010101;
+$black: #262626;
+$completed: #6b6b6b;
+
+* {
+    box-sizing: border-box;
+}
+
+.material-icons {
+    font-size: 20px;
+}
 
 body {
     font-family: 'Josefin Sans', sans-serif;
     background: linear-gradient(135deg,lightseagreen, lightseagreen 40%, blue);
     height: 100vh;
     color: $white;
+    background: #010101;
+}
+
+.main {
+    background: #262626;
+    width: 90%;
+    margin: 5% auto;
+    padding-bottom: 20px;
 }
 
 .header-container {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 10px 0;
+    h1 {
+        text-transform: uppercase;
+        margin-bottom: 10px;
+        span {
+            width: 43px;
+            height: 44px;
+            font-size: 2rem;
+            background: none;
+            color: gray;
+        }
+    }
+    h2 {
+        text-transform: uppercase;
+        font-weight: 100;
+    }
     span {
         background: #fff;
-        width: 25px;
-        height: 25px;
+        width: 30px;
+        height: 30px;
         border-radius: 50%;
         display: inline-block;
         color: black;
         position: relative;
-        padding: 5px;
         text-align: center;
-        line-height: 1.2;
+        line-height: 1.75;
+        font-size: .75em;
+        vertical-align: bottom;
     }
 }
 
 ul {
     margin-bottom: 30px;
     li {
-        height: 45px;
+        height: 48px;
         width: 100%;
         display: flex;
         align-items: center;
-        padding-left: 20px;
+        justify-content: space-between;
+        padding: 0 20px;
         border-top: 1px solid $white;
+        text-shadow: 2px 1px 1px black;
+    }
+    li:last-child {
+        border-bottom: 1px solid $white;
     }
 }
 
 #newItemButton {
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
     button {
-       width: 120px;
-       height: 40px;
-       border-radius: 2px;
-       background: none;
-       border: 2px solid #fff;
-       color: white;
-       text-transform: uppercase;
+     display: flex;
+     align-items: center;
+     justify-content: space-around;
+     width: 120px;
+     height: 40px;
+     border-radius: 2px;
+     background: none;
+     border: 2px solid #fff;
+     color: white;
+     text-transform: uppercase;
+     padding-left: 15px;
     }
 }
 
 form {
     text-align: center;
+    margin-bottom: 20px;
     input#itemDescription {
         height: 40px;
-        border: 1px solid $white;
+        border: 2px solid $white;
         border-radius: 3px;
         color: #fff;
         text-transform: uppercase;
@@ -69,17 +117,52 @@ form {
         min-width: 230px;
         background: none;
     }
+    input#itemDescription:focus {
+        outline: none;
+    }
     #add {
         width: 80px;
-        height: 44px;
-        background: none;
-        border: 1px solid $white;
+        height: 40px;
+        background: #fff;
+        border: 1px solid #fff;
         border-radius: 3px;
-        color: #fff;
+        color: black;
         text-transform: uppercase;
-        font-weight: 100;
+        font-weight: 400;
     }
     input::-webkit-input-placeholder {
         color: $white;
     }
+}
+
+#resetButton {
+    display: flex;
+    justify-content: center;
+    button {
+        border: 2px solid tomato;
+        height: 40px;
+        width: 120px;
+        border-radius: 3px;
+        color: white;
+        background: tomato;
+        text-transform: uppercase;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding-left: 13px;
+        &:focus {
+            outline: none;
+        }
+        i {
+            font-size: 20px;
+        }
+    }
+
+}
+
+.hot {
+    background-color: tomato;
+}
+.complete {
+    background-color: $completed;
 }
