--- a/css/styles.css
+++ b/css/styles.css
@@ -49,54 +49,92 @@ table {
     font-family: 'Josefin Sans', sans-serif;
     font-family: 'Montserrat', sans-serif;
 */
+* {
+  box-sizing: border-box; }
+
+.material-icons {
+  font-size: 20px; }
+
 body {
   font-family: 'Josefin Sans', sans-serif;
   background: linear-gradient(135deg, lightseagreen, lightseagreen 40%, blue);
   height: 100vh;
-  color: #fff; }
+  color: #fff;
+  background: #010101; }
+
+.main {
+  background: #262626;
+  width: 90%;
+  margin: 5% auto;
+  padding-bottom: 20px; }
 
 .header-container {
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+  padding: 10px 0; }
+  .header-container h1 {
+    text-transform: uppercase;
+    margin-bottom: 10px; }
+    .header-container h1 span {
+      width: 43px;
+      height: 44px;
+      font-size: 2rem;
+      background: none;
+      color: gray; }
+  .header-container h2 {
+    text-transform: uppercase;
+    font-weight: 100; }
   .header-container span {
     background: #fff;
-    width: 25px;
-    height: 25px;
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
     display: inline-block;
     color: black;
     position: relative;
-    padding: 5px;
     text-align: center;
-    line-height: 1.2; }
+    line-height: 1.75;
+    font-size: .75em;
+    vertical-align: bottom; }
 
 ul {
   margin-bottom: 30px; }
   ul li {
-    height: 45px;
+    height: 48px;
     width: 100%;
     display: flex;
     align-items: center;
-    padding-left: 20px;
-    border-top: 1px solid #fff; }
+    justify-content: space-between;
+    padding: 0 20px;
+    border-top: 1px solid #fff;
+    text-shadow: 2px 1px 1px black; }
+  ul li:last-child {
+    border-bottom: 1px solid #fff; }
 
 #newItemButton {
-  text-align: center; }
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px; }
   #newItemButton button {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
     width: 120px;
     height: 40px;
     border-radius: 2px;
     background: none;
     border: 2px solid #fff;
     color: white;
-    text-transform: uppercase; }
+    text-transform: uppercase;
+    padding-left: 15px; }
 
 form {
-  text-align: center; }
+  text-align: center;
+  margin-bottom: 20px; }
   form input#itemDescription {
     height: 40px;
-    border: 1px solid #fff;
+    border: 2px solid #fff;
     border-radius: 3px;
     color: #fff;
     text-transform: uppercase;
@@ -104,16 +142,44 @@ form {
     padding-left: 10px;
     min-width: 230px;
     background: none; }
+  form input#itemDescription:focus {
+    outline: none; }
   form #add {
     width: 80px;
-    height: 44px;
-    background: none;
+    height: 40px;
+    background: #fff;
     border: 1px solid #fff;
     border-radius: 3px;
-    color: #fff;
+    color: black;
     text-transform: uppercase;
-    font-weight: 100; }
+    font-weight: 400; }
   form input::-webkit-input-placeholder {
     color: #fff; }
+
+#resetButton {
+  display: flex;
+  justify-content: center; }
+  #resetButton button {
+    border: 2px solid tomato;
+    height: 40px;
+    width: 120px;
+    border-radius: 3px;
+    color: white;
+    background: tomato;
+    text-transform: uppercase;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-left: 13px; }
+    #resetButton button:focus {
+      outline: none; }
+    #resetButton button i {
+      font-size: 20px; }
+
+.hot {
+  background-color: tomato; }
+
+.complete {
+  background-color: #6b6b6b; }
 
 /*# sourceMappingURL=styles.css.map */
