--- a/css/_styles.scss
+++ b/css/_styles.scss
@@ -47,25 +47,34 @@ body {
             background: none;
             color: gray;
         }
+        i {
+            vertical-align: text-top;
+            font-size: 26px;
+        }
+    }
+    .sub-title {
+        font-variant: small-caps;
     }
     h2 {
         text-transform: uppercase;
-        font-weight: 100;
+        font-weight: 400;
+        font-size: 1.125em;
     }
     span {
         background: #fff;
-        width: 30px;
-        height: 30px;
+        width: 25px;
+        height: 25px;
         border-radius: 50%;
         display: inline-block;
         color: black;
         position: relative;
         text-align: center;
-        line-height: 1.75;
-        font-size: .75em;
-        vertical-align: bottom;
+        line-height: 1.5;
+        // font-size: .75em;
+        // vertical-align: bottom;
     }
 }
+
 
 ul {
     margin-bottom: 30px;
@@ -138,6 +147,7 @@ form {
 #resetButton {
     display: flex;
     justify-content: center;
+    margin-bottom: 60px;
     button {
         border: 2px solid tomato;
         height: 40px;
@@ -158,6 +168,18 @@ form {
         }
     }
 
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    p {
+        font-size: .7em;
+        text-transform: uppercase;
+        font-weight: 300;
+        color: gray;
+    }
 }
 
 .hot {
