--- a/css/styles.css
+++ b/css/styles.css
@@ -82,21 +82,25 @@ body {
       font-size: 2rem;
       background: none;
       color: gray; }
+    .header-container h1 i {
+      vertical-align: text-top;
+      font-size: 26px; }
+  .header-container .sub-title {
+    font-variant: small-caps; }
   .header-container h2 {
     text-transform: uppercase;
-    font-weight: 100; }
+    font-weight: 400;
+    font-size: 1.125em; }
   .header-container span {
     background: #fff;
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
     border-radius: 50%;
     display: inline-block;
     color: black;
     position: relative;
     text-align: center;
-    line-height: 1.75;
-    font-size: .75em;
-    vertical-align: bottom; }
+    line-height: 1.5; }
 
 ul {
   margin-bottom: 30px; }
@@ -158,7 +162,8 @@ form {
 
 #resetButton {
   display: flex;
-  justify-content: center; }
+  justify-content: center;
+  margin-bottom: 60px; }
   #resetButton button {
     border: 2px solid tomato;
     height: 40px;
@@ -175,6 +180,16 @@ form {
       outline: none; }
     #resetButton button i {
       font-size: 20px; }
+
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  footer p {
+    font-size: .7em;
+    text-transform: uppercase;
+    font-weight: 300;
+    color: gray; }
 
 .hot {
   background-color: tomato; }
