--- a/css/_styles.scss
+++ b/css/_styles.scss
@@ -29,7 +29,7 @@ body {
     background: #262626;
     width: 90%;
     margin: 5% auto;
-    padding-bottom: 20px;
+    height: 94vh;
 }
 
 .header-container {
@@ -147,7 +147,7 @@ form {
 #resetButton {
     display: flex;
     justify-content: center;
-    margin-bottom: 60px;
+    margin-bottom: 40px;
     button {
         border: 2px solid tomato;
         height: 40px;
@@ -174,6 +174,16 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
+    height: 10vh;
+    padding: 20px 0;
+    // background: black;
+    .divider {
+        width: 75%;
+        height: 10px;
+        margin-bottom: 15px;
+        border-top: 1px solid lightgray;
+    }
     p {
         font-size: .7em;
         text-transform: uppercase;
