--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ body {
   background: #262626;
   width: 90%;
   margin: 5% auto;
-  padding-bottom: 20px; }
+  height: 94vh; }
 
 .header-container {
   display: flex;
@@ -163,7 +163,7 @@ form {
 #resetButton {
   display: flex;
   justify-content: center;
-  margin-bottom: 60px; }
+  margin-bottom: 40px; }
   #resetButton button {
     border: 2px solid tomato;
     height: 40px;
@@ -184,7 +184,15 @@ form {
 footer {
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+  width: 100%;
+  height: 10vh;
+  padding: 20px 0; }
+  footer .divider {
+    width: 75%;
+    height: 10px;
+    margin-bottom: 15px;
+    border-top: 1px solid lightgray; }
   footer p {
     font-size: .7em;
     text-transform: uppercase;
