--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,8 @@ body {
   background: #262626;
   width: 90%;
   margin: 5% auto;
-  height: 94vh; }
+  min-height: 80vh;
+  padding-bottom: 5px; }
 
 .header-container {
   display: flex;
@@ -112,7 +113,8 @@ ul {
     justify-content: space-between;
     padding: 0 20px;
     border-top: 1px solid #fff;
-    text-shadow: 2px 1px 1px black; }
+    text-shadow: 1px 1px 1px #262626;
+    background: linear-gradient(170deg, cadetblue, #262626); }
   ul li:last-child {
     border-bottom: 1px solid #fff; }
 
@@ -186,8 +188,14 @@ footer {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 10vh;
-  padding: 20px 0; }
+  min-height: 10vh;
+  padding: 0px 0 10px; }
+  footer h2 {
+    text-transform: uppercase;
+    margin-top: 10px;
+    font-size: 1.25em; }
+    footer h2 span {
+      color: gray; }
   footer .divider {
     width: 75%;
     height: 10px;
@@ -203,6 +211,6 @@ footer {
   background-color: tomato; }
 
 .complete {
-  background-color: #6b6b6b; }
+  background: linear-gradient(175deg, #6b6b6b, #262626 75%); }
 
 /*# sourceMappingURL=styles.css.map */
